# nmb-ba-staffing-portal

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: .env.example  .nixpacksignore  Dockerfile  main.py  pyproject.toml  railway.toml  requirements.txt
backend/app/api/: admin.py  auth.py  bas.py  files.py  health.py  job_types.py  jobs.py  profile.py  qbo.py  reports.py  webhooks.py
backend/app/core/: auth.py  config.py  supabase.py
backend/app/models/: __init__.py  ba_profile.py  job.py  job_application.py  user.py
backend/app/services/: dropbox_storage.py  email.py  encryption.py  geocoding.py  payouts.py  paypal.py  qbo.py  qbo_sync.py  w9_pdf.py
backend/scripts/: backfill_ba_city_state.py  backfill_job_day_location_coords.py
backend/tests/: test_health.py  test_undo_checkout.py
frontend/: .env.example  Dockerfile  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  railway.toml  sentry.server.config.ts
frontend/src/: middleware.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: contact-phone.tsx
frontend/src/components/admin/: bas-table.tsx  job-actions.tsx  jobs-page-client.tsx  jobs-table.tsx  payouts-card.tsx  remove-ba-button.tsx
frontend/src/components/auth/: session-reset.tsx
frontend/src/components/dashboard/: payout-method-card.tsx  tax-documents-card.tsx
frontend/src/components/layout/: dashboard-layout.tsx  header.tsx  index.ts  sidebar.tsx
frontend/src/hooks/: useContactPhone.ts  useMultiDayJob.ts
frontend/src/lib/: api.ts  compress-image.ts  contact-phone.ts  error-message.ts  impersonation.ts  pdf-report.ts  us-states.ts  utils.ts
frontend/src/types/: index.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20240101000000_initial_schema.sql  20240212000000_fix_rls_and_storage.sql  20240212000001_fix_rls_recursion_v2.sql  20240212000002_set_admin_role.sql  20240213000000_active_job_features.sql  20240214000000_registration_expansion.sql  20240215000000_simplify_job_status.sql  20240216000000_additional_info_and_admin_notes.sql  20240217000000_enhanced_checkout_and_photos.sql  20260428000000_add_w9_and_payout_fields.sql  20260508160131_app_settings.sql  20260522000000_add_ba_address_fields.sql
(+76 files in other folders)
