[project]
name = "nmb-ba-staffing-api"
version = "0.1.0"
description = "Backend API for NMB BA Staffing Portal"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
# Relaxed for now: FastAPI handlers and third-party APIs (supabase, jose) leak Any
# into the codebase, which makes strict-untyped-def and warn-return-any too noisy
# to be a useful signal. Real type errors (mismatched assignment, missing None
# guards, etc.) are still surfaced.
warn_return_any = false
disallow_untyped_defs = false

# Supabase-py's response types declare data as Optional/JSON, but at runtime the
# code consistently guards with `if not result.data:` before access. mypy can't
# narrow through method chains, so suppress the resulting noise per-module.
[[tool.mypy.overrides]]
module = [
    "app.api.admin",
    "app.api.bas",
    "app.api.files",
    "app.api.job_types",
    "app.api.jobs",
    "app.api.profile",
    "app.api.qbo",
    "app.api.reports",
    "app.core.auth",
    "app.services.qbo_sync",
]
disable_error_code = ["index", "attr-defined", "union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
